# Game2048

./: CMakeLists.txt  Cube.qml  FieldGame.qml  Main.qml  main.cpp
Deployment/android/: AndroidManifest.xml  copyplikapk.bat
Deployment/android/apk/en.Endolrizon.appGame2048xarm64_v8a/: appGame2048.apk.idsig  output-metadata.json
Deployment/android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
Deployment/windows/: packetdelete.bat  packetgenerators.bat
Documentation/: Dokumentacja.docx
Page/: GameEndPage.qml  GamePage.qml  MenuPage.qml
